--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -48,7 +48,7 @@ jobs:
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          install_components: cloud-run
+          # Removed install_components: cloud-run because it's unnecessary
 
       #################################################
       # 4) DEPLOY TO CLOUD RUN
